--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -137,7 +137,7 @@
             <!-- <div class="em">
             </div> -->
             <a href="next-page.html" class="btn btn-primary">like</a>
-            <a href="next-page.html" class="btn btn-primary">MY</a>
+            <a href="/myprofile" class="btn btn-primary">MY</a>
 
 
         </div>
