Fix: 페이지 연결 수정
signup에서 signup -> signup->myprofile
signup 로그인하기 버튼 로그인 화면으로 연결

--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -153,7 +153,7 @@
                     <input type="password" id="user_conpw" oninput="checkPasswordMatch()" placeholder="비밀번호를 다시 한번 입력해주세요!" required>
                     <input type="submit" id="signup_btn" value="회원가입" />
                 </form>
-                이미 회원이신가요? <a href="/signup" class="auth-link">로그인하기</a>
+                이미 회원이신가요? <a href="/" class="auth-link">로그인하기</a>
                 <!-- 여기도 링크수정!! -->
 
             </div>
