--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -89,6 +89,14 @@
             }
         </style>
 
+        <script>
+            $(document).ready(function () {
+                    
+            });
+
+            
+        </script>
+
 
     </head>
     <main>
@@ -100,7 +108,6 @@
                 </div> -->
                 <a href="next-page.html" class="btn btn-primary">like</a>
                 <a href="/myprofile" class="btn btn-primary">MY</a>
-
 
             </div>
 
