--- a/templates/index.html
+++ b/templates/index.html
@@ -133,6 +133,14 @@
                 // 4. db에 이름을 찾고 이메일 입력값과 이름의 입력값이 같은지 확인, 아이디도 확인 이메일이 없다면('해당하는 이메일이 없습니다!')
                 // 5. 이메일과 아이디가 맞다면 alert('아이디값')
             }
+            function checkRemeberLoginInfo(){//웹스토리지 이용하여 저장 또는 삭제.
+
+                let userId = idInput.value;
+        
+                if(chkRemember.checked==true){
+        
+                    localStorage.setItem(idKey,userId);
+                }}
 
         </script>
 
