--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -31,7 +31,7 @@
             }
             .signup-wrapper {
                 width: 400px;
-                height: 450px;
+                height: 800px;
                 padding: 40px;
                 background-color: #fff;
                 border-radius: 10px;
@@ -91,11 +91,68 @@
 
         <script>
             $(document).ready(function () {
-                    
+                showProfile()
             });
+
+            function showProfile() {
+                
+                $('#profile-box').empty()
+
+                $.ajax({
+                    type: "GET",
+                    url: '/profile/list',
+                    success: function (response) {
+                        if (response['result'] != 'success') {
+                            alert( ' 프로필 불러오기 실패!')
+                            return
+                        }
+                        console
+                        addprofileCards(response['profiles_list'])
+                    }
+                })
+            }
+
+            function addprofileCards(profiles) {
+                // for 문을 활용하여 movies 배열의 요소를 차례대로 조회합니다.
+                for (let i = 0; i < profiles.length; i++) {
+                    let profile = profiles[i]
+
+                    let name = profile['Name']
+                    let age = profile['Ages']
+                    let major = profile['MajorStatus']
+                    let stack = profile['Stack']
+                    let freeword = profile['FreeWord']
+                
+    
+                    // 2. 영화 카드를 만듭니다.
+                    let cardPosterHtml = `<img src="" alt="사진"/>`;
+                    let cardContentHtml =
+                        `<div class="d-flex flex-column mb-3">
+                            <span class="user_name">이름 ${name} </span>
+                            <span class="user_ages">나이 ${age} </span>
+                            <span class="user_major">전공 여부 ${major} </span>
+                            <span class="user_techStack">기술 스택 ${stack} </span>
+                            <span class="user_introduction">하고싶은말 ${freeword}</span>
+                        </div>`
+    
+    
+                    $('#profile-box').append(
+                        `<div class="shadow-lg card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-2 m-3">
+                                    ${cardPosterHtml}
+                                </div>    
+                                <div class="col-md-9 mt-3">
+                                    ${cardContentHtml}
+                                </div>
+                            </div>
+                        </div>`)
+                }
+            }
 
             
         </script>
+
 
 
     </head>
@@ -108,7 +165,9 @@
                 </div> -->
                 <a href="next-page.html" class="btn btn-primary">like</a>
                 <a href="/myprofile" class="btn btn-primary">MY</a>
-
+                <div class="profile-list" id="profile-box">
+                    
+                </div>
             </div>
 
 
